# alexandria

./: .gitignore  README.md
docs/certification-notes/: aws-ecs.md
docs/tool-setup-guides/: repomix-isolated-install.md  trivy.md  vscode.md
gitops/ecs/: asg.tf  data.tf  ec2.tf  ecs.tf  iam.tf  main.tf  output.tf  security.tf  variables.tf
gitops/lb/: alb.tf  data.tf  listeners.tf  locals.tf  main.tf  output.tf  security_group.tf
gitops/vpc/: elastic_ips.tf  internet_gateway.tf  locals.tf  main.tf  nat_gateway.tf  output.tf  route_tables.tf  subnets.tf  vpc.tf
libs/ssmsync/: go.mod  main.go
notes/: repomix-isolated-install.md
notes/IAM and Organizations/: README.md
notes/ML/: README.md
notes/Storage Options/: README.md
notes/Terraform/: README.md
notes/awscli/: profiles.md
notes/monitoring/: README.md
platform/: README.md
platform/lab-k8s/: .terraform.lock.hcl  Makefile  main.tf
projects/1 - rds with terraform/: rds.tf
projects/10 - iceberg/: main.py
projects/2 - dms with terraform/: Makefile  README.md  migration.py  pyproject.toml
projects/2 - dms with terraform/src/data/: __init__.py  generate.py
projects/2 - dms with terraform/src/db/: __init__.py  models.py  operations.py
projects/2 - dms with terraform/terraform/: data.tf  dms.tf  iam.tf  locals.tf  output.tf  rds.tf  s3.tf
projects/5 - metabase on ecs/: README.MD  ecs.tf  import.tf  main.tf  output.tf  sg.tf
projects/7 - metabase on ecs/: Makefile  README.MD  alb.tf  ecs.tf  import.tf  locals.tf  rds.tf
projects/8 - mysql dms cdc to s3/: README.md  import.tf  main.tf
projects/9 - no mwaa airflow on aws/: README.md
projects/Apache Iceberg/: pyproject.toml
projects/ECS EC2/: asg.tf  main.tf
projects/ECS Fargate/: alb.tf  generated.tf
projects/EFS/: .terraform.lock.hcl  README.md  ec2.tf  efs.tf  iam.tf  locals.tf  main.tf  network.tf
projects/Event Driven/: README.md
projects/Gmail Docs to S3/: README.md
projects/MySQL Bulk Insert/: Makefile  migration.py
projects/N8N com EC2 e EFS/: security_groups.tf
projects/NGINX Service on ECS EC2/: task_definition.tf
projects/S3 Static Site/: Makefile  README.md
projects/Tools/uv/uvtestlib/: pyproject.toml
projects/Tools/uv/uvtestlib/src/uvtestlib/: __init__.py
projects/api-gateway/: .terraform.lock.hcl  ag-http-proxy.tf  ag-lambda.tf  api-gateway.tf  cognito.tf  cognito_login.sh  iam.tf  lambda.tf  locals.tf
projects/monitoring/1 - otel stdout exporter/: logs.py  pyproject.toml
tools/: README.md
tools/duckdb/: pyproject.toml
tools/typer/: pyproject.toml
(+386 files in other folders)
