[tool.poetry]
name = "quack"
version = "0.1.0"
description = ""
authors = ["Gustavo de Souza Gonçalves <goncalves.gustavo211@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.2.0"
boto3 = "^1.36.26"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
