[tool.poetry]
name = "ninacli"
version = "0.1.0"
description = ""
authors = ["Gustavo de Souza Gonçalves <goncalves.gustavo211@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ninacli = "ninacli.cli:app"