[project]
name = "uvtestlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gustavo de Souza Gonçalves", email = "goncalves.gustavo211@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
